--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
   "engines": {
-    "node": "16.15.0"
+    "node": "16.18.0"
   }
 }
