--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "promise-mysql": "^5.2.0"
   },
   "engines": {
     "node": "16.18.0"
