--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
-    "promise-mysql": "^5.2.0"
+    "promise-mysql": "^5.2.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0"
   },
   "engines": {
     "node": "16.15.0"
